@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2004/10/03 00:12:56 tv Exp $
+# $NetBSD: Makefile,v 1.13 2005/01/12 15:32:00 jlam Exp $
 
 DISTNAME=		fftpack-20001130
-PKGREVISION=	1
+PKGREVISION=		1
 CATEGORIES=		math
 MASTER_SITES=		${MASTER_SITE_LOCAL}
 
@@ -9,7 +9,7 @@ MAINTAINER=		tech-pkg@NetBSD.org
 COMMENT=		Single precision Fortran FFT subroutines
 
 NO_SRC_ON_FTP=		Already in MASTER_SITE_LOCAL
-USE_FORTRAN=		YES
+USE_LANGUAGES=		fortran
 WRKSRC=			${WRKDIR}/fftpack
 
 post-extract:
